프롬프트 개선

--- a/1차 질문 프롬프트.md
+++ b/1차 질문 프롬프트.md
@@ -11,19 +11,37 @@
 1) 추상어 금지: “재밌다/좋다/별로” 단독 사용 금지. 반드시 구체 요인으로 번역한다.
 2) 시청자 구어를 반드시 포착한다.
 3) OST/가수/음원/노래 관련 언급은 분석에서 완전 제외(언급하지도 말 것).
-4) 욕설/비속어/비하는 ***로 마스킹.
+4) 욕설/비속어/비하는 ***로 마스킹하되, 그 '의도'를 파악하여 감성을 분류한다(아래 가이드 필독).
 5) ‘근거 댓글(직접 인용)’은 문서 전체에서 오직 “Top 3 Topics” 섹션에만 포함한다.
 6) 토픽 3개에 들어가는 직접 인용 댓글은 서로 중복되면 안 된다. (토픽당 최대 5개, 총 9개 모두 다른 문장)
 7) 긍부정 키워드는 15개 미만으로 추출.
-8) 비중 OO% 혹은 N% 영역은 샘플 근거로 추정하되, [METRICS] 블록 값은 그대로 사용.
-9) <th>분석 댓글 수</th>는 반드시 [METRICS]의 ANALYSIS_COMMENT_COUNT_LINE을 그대로 복사.
-10) 사용자 요청이 없는 이상, 내가 부여한 너의 역할이나 AI라는 점을 명시하지 않음.
+8) <th>분석 댓글 수</th>는 반드시 [METRICS]의 ANALYSIS_COMMENT_COUNT_LINE을 그대로 복사.
+9) 사용자 요청이 없는 이상, 내가 부여한 너의 역할이나 AI라는 점을 명시하지 않음.
+
+=== [심층 긍부정 판단 가이드 (Contextual Sentiment)] ===
+단순 키워드가 아닌 **'대상(Target)'**과 **'맥락(Context)'**을 보고 4가지로 분류한다.
+1. **몰입형 호평 (Immersion)**: 욕설, 격한 표현, "답답하다"는 표현이 있어도 그 대상이 **'작중 캐릭터(빌런)'**이거나 **'상황 몰입'**인 경우.
+   - 예: "저 쓰레기 같은 X(빌런) 진짜 연기 살벌하네" → (연기 칭찬)
+   - 예: "아 고구마 100개 먹은 듯 ㅠㅠ 사이다 언제 줌?" → (스토리 몰입)
+2. **순수 호평 (Praise)**: 콘텐츠에 대한 직관적인 칭찬, 배우 비주얼/연출 찬양.
+   - 예: "작가님 천재 아니세요?", "영상미 미쳤다"
+3. **콘텐츠 비판 (Criticism)**: 욕설이 없더라도 제작진, 개연성, 휴방, PPL 등 **'품질/운영'**에 대한 불만.
+   - 예: "내용이 산으로 가네", "작가 바뀐 듯", "억지 신파 좀 그만"
+   - 예: "이럴 거면 000은 왜 나오냐?" (캐릭터 낭비 지적)
+4. **비난/노이즈 (Abuse/Noise)**: 맥락 없는 악플, 도배, 타 시청자 공격.
+
+=== [통계 산출 절차 (Internal Process / Strict Counting)] ===
+보고서를 작성하기 전에, 입력된 모든 댓글 샘플에 대해 반드시 다음 절차를 수행하라. (출력은 하지 말고 내부적으로 수행할 것)
+1. **전수 라벨링**: 입력된 모든 댓글 하나하나에 위 4가지 카테고리(①~④) 중 하나를 할당한다.
+2. **카운팅(Counting)**: 각 카테고리별 개수를 정확히 샌다. (대략적인 느낌이나 추정 금지)
+3. **비율 계산**: (해당 카테고리 개수 / 전체 댓글 수) * 100 을 계산하여 소수점 첫째 자리까지 산출한다.
+4. **결과 적용**: 산출된 정확한 수치를 아래 템플릿의 '비중(%)' 란에 기입한다.
 
 === [출력 템플릿: 공백 없이 왼쪽 정렬 필수] ===
 <div class="yt-report">
 <div class="header">
 <h2>유튜브 댓글 여론 리포트</h2>
-<p><span class="badge">댓글 기반</span> <span class="badge">정성+정량</span></p>
+<p><span class="badge">댓글 기반</span> <span class="badge">정성+정량(실측)</span></p>
 </div>
 <div class="card">
 <h3>데이터 요약</h3>
@@ -33,6 +51,41 @@
 <tr><th>분석 댓글 수</th><td>[METRICS] ANALYSIS_COMMENT_COUNT_LINE</td></tr>
 <tr><th>노이즈 비율</th><td>N% (이모지/의미 없는 단문)</td></tr>
 <tr><th>편향성 경고</th><td>1문장 (예: 특정 팬덤/알고리즘 추천으로 의견이 치우칠 수 있음)</td></tr>
+</tbody>
+</table>
+</div>
+<div class="card">
+<h3>정밀 감성 통계 (실측)</h3>
+<p class="note">※ 전체 샘플 전수 집계 결과</p>
+<table class="stats">
+<thead>
+<tr>
+<th>카테고리</th>
+<th>비중(%)</th>
+<th>주요 양상</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td><strong>① 몰입형 호평</strong><br><span class="muted">(캐릭터/연기 대상 격한 반응)</span></td>
+<td>N%</td>
+<td>1문장 요약 (예: 빌런 OO에 대한 분노가 몰입을 견인)</td>
+</tr>
+<tr>
+<td><strong>② 순수 호평</strong><br><span class="muted">(연출/스토리 칭찬)</span></td>
+<td>N%</td>
+<td>1문장 요약</td>
+</tr>
+<tr>
+<td><strong>③ 콘텐츠 비판</strong><br><span class="muted">(개연성/제작진 성토)</span></td>
+<td>N%</td>
+<td>1문장 요약 (예: 후반부 급전개에 대한 불만 다수)</td>
+</tr>
+<tr>
+<td><strong>④ 비난/노이즈</strong><br><span class="muted">(단순 악플)</span></td>
+<td>N%</td>
+<td>-</td>
+</tr>
 </tbody>
 </table>
 </div>
@@ -48,7 +101,7 @@
 <p class="note">※</p>
 </div>
 <div class="card">
-<h3>감성 분포 (추정)</h3>
+<h3>감성 분포 (상세)</h3>
 <table class="sentiment">
 <thead>
 <tr>
@@ -60,7 +113,7 @@
 </thead>
 <tbody>
 <tr>
-<td><strong>긍정</strong></td>
+<td><strong>긍정 (①+②)</strong></td>
 <td>OO%</td>
 <td>
 <ul>
@@ -72,7 +125,7 @@
 <td>키워드1, 키워드2, 키워드3, 키워드4, 키워드5</td>
 </tr>
 <tr>
-<td><strong>부정</strong></td>
+<td><strong>부정 (③+④)</strong></td>
 <td>OO%</td>
 <td>
 <ul>
