--- a/1차 질문 프롬프트.md
+++ b/1차 질문 프롬프트.md
@@ -11,7 +11,7 @@
 1) 추상어 금지: “재밌다/좋다/별로” 단독 사용 금지. 반드시 구체 요인으로 번역한다.
 2) 시청자 구어를 반드시 포착한다.
 3) OST/가수/음원/노래 관련 언급은 분석에서 완전 제외(언급하지도 말 것).
-4) 욕설/비속어/비하는 ***로 마스킹하되, 그 '의도'를 파악하여 감성을 분류한다(아래 가이드 필독).
+4) 욕설/비속어/비하는 ***로 마스킹하되, 그 '의도'를 파악하여 감성을 분류한다.
 5) ‘근거 댓글(직접 인용)’은 문서 전체에서 오직 “Top 3 Topics” 섹션에만 포함한다.
 6) 토픽 3개에 들어가는 직접 인용 댓글은 서로 중복되면 안 된다. (토픽당 최대 5개, 총 9개 모두 다른 문장)
 7) 긍부정 키워드는 15개 미만으로 추출.
@@ -19,20 +19,21 @@
 9) 사용자 요청이 없는 이상, 내가 부여한 너의 역할이나 AI라는 점을 명시하지 않음.
 
 === [심층 긍부정 판단 가이드 (Contextual Sentiment)] ===
-단순 키워드가 아닌 **'대상(Target)'**과 **'맥락(Context)'**을 보고 4가지로 분류한다.
-1. **몰입형 호평 (Immersion)**: 욕설, 격한 표현, "답답하다"는 표현이 있어도 그 대상이 **'작중 캐릭터(빌런)'**이거나 **'상황 몰입'**인 경우.
+단순 키워드가 아닌 **'대상(Target)'**과 **'맥락(Context)'**을 보고 5가지로 분류한다.
+1. **[긍정] 몰입형 호평 (Immersion)**: 욕설, 격한 표현, "답답하다"는 표현이 있어도 그 대상이 **'작중 캐릭터(빌런)'**이거나 **'상황 몰입'**인 경우.
    - 예: "저 쓰레기 같은 X(빌런) 진짜 연기 살벌하네" → (연기 칭찬)
-   - 예: "아 고구마 100개 먹은 듯 ㅠㅠ 사이다 언제 줌?" → (스토리 몰입)
-2. **순수 호평 (Praise)**: 콘텐츠에 대한 직관적인 칭찬, 배우 비주얼/연출 찬양.
+2. **[긍정] 순수 호평 (Praise)**: 콘텐츠에 대한 직관적인 칭찬, 배우 비주얼/연출 찬양.
    - 예: "작가님 천재 아니세요?", "영상미 미쳤다"
-3. **콘텐츠 비판 (Criticism)**: 욕설이 없더라도 제작진, 개연성, 휴방, PPL 등 **'품질/운영'**에 대한 불만.
-   - 예: "내용이 산으로 가네", "작가 바뀐 듯", "억지 신파 좀 그만"
-   - 예: "이럴 거면 000은 왜 나오냐?" (캐릭터 낭비 지적)
-4. **비난/노이즈 (Abuse/Noise)**: 맥락 없는 악플, 도배, 타 시청자 공격.
+3. **[중립] 중립/논쟁 (Neutral/Debate)**: 호불호가 갈리는 논쟁(A vs B), 단순 질문, 팩트 체크, 혹은 판단 보류.
+   - 예: "원작이랑 결말 다르네?", "이거 시즌2 나오는 거임?"
+   - 예: "남주는 불쌍한데 여주는 이해 안 됨" (복합적)
+4. **[부정] 콘텐츠 비판 (Criticism)**: 욕설이 없더라도 제작진, 개연성, 휴방, PPL 등 **'품질/운영'**에 대한 불만.
+   - 예: "내용이 산으로 가네", "억지 신파 좀 그만"
+5. **[부정] 비난/노이즈 (Abuse/Noise)**: 맥락 없는 악플, 도배, 타 시청자 공격.
 
 === [통계 산출 절차 (Internal Process / Strict Counting)] ===
 보고서를 작성하기 전에, 입력된 모든 댓글 샘플에 대해 반드시 다음 절차를 수행하라. (출력은 하지 말고 내부적으로 수행할 것)
-1. **전수 라벨링**: 입력된 모든 댓글 하나하나에 위 4가지 카테고리(①~④) 중 하나를 할당한다.
+1. **전수 라벨링**: 입력된 모든 댓글 하나하나에 위 5가지 카테고리(①~⑤) 중 하나를 할당한다.
 2. **카운팅(Counting)**: 각 카테고리별 개수를 정확히 샌다. (대략적인 느낌이나 추정 금지)
 3. **비율 계산**: (해당 카테고리 개수 / 전체 댓글 수) * 100 을 계산하여 소수점 첫째 자리까지 산출한다.
 4. **결과 적용**: 산출된 정확한 수치를 아래 템플릿의 '비중(%)' 란에 기입한다.
@@ -55,18 +56,68 @@
 </table>
 </div>
 <div class="card">
+<h3>감성 분포 (종합)</h3>
+<table class="sentiment">
+<thead>
+<tr>
+<th>구분</th>
+<th>비중(%)</th>
+<th>핵심 요인(구체)</th>
+<th>키워드</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td><strong>긍정</strong></td>
+<td>OO%</td>
+<td>
+<ul>
+<li>요인 1</li>
+<li>요인 2</li>
+</ul>
+</td>
+<td>키워드1, 키워드2, 키워드3</td>
+</tr>
+<tr>
+<td><strong>부정</strong></td>
+<td>OO%</td>
+<td>
+<ul>
+<li>요인 1</li>
+<li>요인 2</li>
+</ul>
+</td>
+<td>키워드1, 키워드2, 키워드3</td>
+</tr>
+<tr>
+<td><strong>중립/논쟁</strong></td>
+<td>OO%</td>
+<td>
+<ul>
+<li>갈등축 1 (A vs B)</li>
+<li>주요 논점</li>
+</ul>
+</td>
+<td>키워드1, 키워드2</td>
+</tr>
+</tbody>
+</table>
+</div>
+<div class="card">
 <h3>정밀 감성 통계 (실측)</h3>
-<p class="note">※ 전체 샘플 전수 집계 결과</p>
+<p class="note">※ 텍스트 맥락(Context) 기반 전수 분류 결과</p>
 <table class="stats">
 <thead>
 <tr>
-<th>카테고리</th>
+<th>감성</th>
+<th>세부 카테고리</th>
 <th>비중(%)</th>
 <th>주요 양상</th>
 </tr>
 </thead>
 <tbody>
 <tr>
+<td rowspan="2"><strong>긍정</strong></td>
 <td><strong>① 몰입형 호평</strong><br><span class="muted">(캐릭터/연기 대상 격한 반응)</span></td>
 <td>N%</td>
 <td>1문장 요약 (예: 빌런 OO에 대한 분노가 몰입을 견인)</td>
@@ -77,12 +128,19 @@
 <td>1문장 요약</td>
 </tr>
 <tr>
-<td><strong>③ 콘텐츠 비판</strong><br><span class="muted">(개연성/제작진 성토)</span></td>
+<td><strong>중립</strong></td>
+<td><strong>③ 중립/논쟁</strong><br><span class="muted">(질문/토론/관망)</span></td>
+<td>N%</td>
+<td>1문장 요약 (예: 결말 해석에 대한 의견 분분)</td>
+</tr>
+<tr>
+<td rowspan="2"><strong>부정</strong></td>
+<td><strong>④ 콘텐츠 비판</strong><br><span class="muted">(개연성/제작진 성토)</span></td>
 <td>N%</td>
 <td>1문장 요약 (예: 후반부 급전개에 대한 불만 다수)</td>
 </tr>
 <tr>
-<td><strong>④ 비난/노이즈</strong><br><span class="muted">(단순 악플)</span></td>
+<td><strong>⑤ 비난/노이즈</strong><br><span class="muted">(단순 악플)</span></td>
 <td>N%</td>
 <td>-</td>
 </tr>
@@ -99,56 +157,6 @@
 </tbody>
 </table>
 <p class="note">※</p>
-</div>
-<div class="card">
-<h3>감성 분포 (상세)</h3>
-<table class="sentiment">
-<thead>
-<tr>
-<th>구분</th>
-<th>비중(%)</th>
-<th>핵심 요인(구체)</th>
-<th>키워드</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td><strong>긍정 (①+②)</strong></td>
-<td>OO%</td>
-<td>
-<ul>
-<li>요인 1</li>
-<li>요인 2</li>
-<li>요인 3</li>
-</ul>
-</td>
-<td>키워드1, 키워드2, 키워드3, 키워드4, 키워드5</td>
-</tr>
-<tr>
-<td><strong>부정 (③+④)</strong></td>
-<td>OO%</td>
-<td>
-<ul>
-<li>요인 1</li>
-<li>요인 2</li>
-<li>요인 3</li>
-</ul>
-</td>
-<td>키워드1, 키워드2, 키워드3, 키워드4, 키워드5</td>
-</tr>
-<tr>
-<td><strong>중립/논쟁</strong></td>
-<td>OO%</td>
-<td>
-<ul>
-<li>갈등축 1 (A vs B)</li>
-<li>갈등축 2</li>
-</ul>
-</td>
-<td>키워드1, 키워드2, 키워드3, 키워드4, 키워드5</td>
-</tr>
-</tbody>
-</table>
 </div>
 <div class="card">
 <h3>핵심 토픽 3</h3>
