--- a/1차 질문 프롬프트.md
+++ b/1차 질문 프롬프트.md
@@ -20,15 +20,16 @@
 
 === [심층 긍부정 판단 가이드 (Contextual Sentiment)] ===
 단순 키워드가 아닌 **'대상(Target)'**과 **'맥락(Context)'**을 보고 5가지로 분류한다.
-1. **[긍정] 몰입형 호평 (Immersion)**: 욕설, 격한 표현, "답답하다"는 표현이 있어도 그 대상이 **'작중 캐릭터(빌런)'**이거나 **'상황 몰입'**인 경우.
-   - 예: "저 쓰레기 같은 X(빌런) 진짜 연기 살벌하네" → (연기 칭찬)
-2. **[긍정] 순수 호평 (Praise)**: 콘텐츠에 대한 직관적인 칭찬, 배우 비주얼/연출 찬양.
-   - 예: "작가님 천재 아니세요?", "영상미 미쳤다"
+
+1. **[긍정] 순수 호평 (Praise)**: 콘텐츠에 대한 직관적인 칭찬,(캐릭터,연출,스토리 등) 배우 비주얼/연출 찬양.
+   - 예: "작가님 천재 아니세요?", "영상미 미쳤다", "OO배우 잘생겼다", "OO캐릭터 찰떡이다"
+2. **[긍정] 몰입형 호평 (Immersion)**: 욕설, 격한 표현, "답답하다"는 표현이 있어도 그 대상이 **'작중 캐릭터(빌런)'**이거나 **'상황 몰입'**인 경우.
+   - 예: "저 쓰레기 같은 X(빌런) 진짜 연기 살벌하네" → (연기 칭찬), 대한민국의 XX같은 상황을 잘 보여주는 드라마네요
 3. **[중립] 중립/논쟁 (Neutral/Debate)**: 호불호가 갈리는 논쟁(A vs B), 단순 질문, 팩트 체크, 혹은 판단 보류.
    - 예: "원작이랑 결말 다르네?", "이거 시즌2 나오는 거임?"
    - 예: "남주는 불쌍한데 여주는 이해 안 됨" (복합적)
-4. **[부정] 콘텐츠 비판 (Criticism)**: 욕설이 없더라도 제작진, 개연성, 휴방, PPL 등 **'품질/운영'**에 대한 불만.
-   - 예: "내용이 산으로 가네", "억지 신파 좀 그만"
+4. **[부정] 콘텐츠 비판 (Criticism)**: 욕설이 없더라도 제작진, 개연성, 휴방, PPL, 캐릭터, 산으로가는 스토리 등 **'품질/운영'**에 대한 불만.
+   - 예: "내용이 산으로 가네", "억지 신파 좀 그만", "저 캐릭터는 발암이다"
 5. **[부정] 비난/노이즈 (Abuse/Noise)**: 맥락 없는 악플, 도배, 타 시청자 공격.
 
 === [통계 산출 절차 (Internal Process / Strict Counting)] ===
@@ -104,7 +105,7 @@
 </table>
 </div>
 <div class="card">
-<h3>정밀 감성 통계 (실측)</h3>
+<h3>정밀 감성 통계</h3>
 <p class="note">※ 텍스트 맥락(Context) 기반 전수 분류 결과</p>
 <table class="stats">
 <thead>
@@ -118,24 +119,24 @@
 <tbody>
 <tr>
 <td rowspan="2"><strong>긍정</strong></td>
-<td><strong>① 몰입형 호평</strong><br><span class="muted">(캐릭터/연기 대상 격한 반응)</span></td>
+<td><strong>① 순수 호평</strong><br><span class="muted">(연출/스토리/소재/배우/캐릭터)</span></td>
+<td>N%</td>
+<td>1문장 요약 </td>
+</tr>
+<tr>
+<td><strong>② 몰입형</strong><br><span class="muted">(드라마 속 상황에 몰입)</span></td>
 <td>N%</td>
 <td>1문장 요약 (예: 빌런 OO에 대한 분노가 몰입을 견인)</td>
 </tr>
 <tr>
-<td><strong>② 순수 호평</strong><br><span class="muted">(연출/스토리 칭찬)</span></td>
-<td>N%</td>
-<td>1문장 요약</td>
-</tr>
-<tr>
 <td><strong>중립</strong></td>
-<td><strong>③ 중립/논쟁</strong><br><span class="muted">(질문/토론/관망)</span></td>
+<td><strong>③ 중립 및 논쟁</strong><br><span class="muted">(질문/토론/관망/팩트전달)</span></td>
 <td>N%</td>
 <td>1문장 요약 (예: 결말 해석에 대한 의견 분분)</td>
 </tr>
 <tr>
 <td rowspan="2"><strong>부정</strong></td>
-<td><strong>④ 콘텐츠 비판</strong><br><span class="muted">(개연성/제작진 성토)</span></td>
+<td><strong>④ 콘텐츠 비판</strong><br><span class="muted">(개연성/제작진/배우 비판)</span></td>
 <td>N%</td>
 <td>1문장 요약 (예: 후반부 급전개에 대한 불만 다수)</td>
 </tr>
@@ -156,7 +157,6 @@
 <tr><th>성과/반응</th><td>1문장</td></tr>
 </tbody>
 </table>
-<p class="note">※</p>
 </div>
 <div class="card">
 <h3>핵심 토픽 3</h3>
@@ -215,8 +215,8 @@
 <h3>추가 메모</h3>
 <table class="notes">
 <tbody>
-<tr><th>기회 신호</th><td>2~3줄 (직접 인용 금지)</td></tr>
-<tr><th>리스크 신호</th><td>2~3줄 (직접 인용 금지)</td></tr>
+<tr><th>기회</th><td>2~3줄 (직접 인용 금지)</td></tr>
+<tr><th>리스크</th><td>2~3줄 (직접 인용 금지)</td></tr>
 <tr><th>체크포인트</th><td>추적할 키워드/갈등축 2개 (직접 인용 금지)</td></tr>
 </tbody>
 </table>
