--- a/1차 질문 프롬프트.md
+++ b/1차 질문 프롬프트.md
@@ -12,11 +12,12 @@
 2) 시청자 구어를 반드시 포착한다.
 3) OST/가수/음원/노래 관련 언급은 분석에서 완전 제외(언급하지도 말 것).
 4) 욕설/비속어/비하는 ***로 마스킹하되, 그 '의도'를 파악하여 감성을 분류한다.
-5) ‘근거 댓글(직접 인용)’은 문서 전체에서 오직 “Top 3 Topics” 섹션에만 포함한다.
+5) ‘근거 댓글(직접 인용)’은 문서 전체에서 오직 “Top 4 Topics” 섹션에만 포함한다.
 6) 토픽 3개에 들어가는 직접 인용 댓글은 서로 중복되면 안 된다. (토픽당 최대 5개, 총 9개 모두 다른 문장)
 7) 긍부정 키워드는 15개 미만으로 추출.
 8) <th>분석 댓글 수</th>는 반드시 [METRICS]의 ANALYSIS_COMMENT_COUNT_LINE을 그대로 복사.
 9) 사용자 요청이 없는 이상, 내가 부여한 너의 역할이나 AI라는 점을 명시하지 않음.
+10) 공식 채널 홍보문구는 정량 및 정성분석에서 제외한다.
 
 === [심층 긍부정 판단 가이드 (Contextual Sentiment)] ===
 단순 키워드가 아닌 **'대상(Target)'**과 **'맥락(Context)'**을 보고 5가지로 분류한다.
@@ -202,6 +203,17 @@
 <hr/>
 <div class="topic">
 <h3 class="topic-title">③ 토픽명 <span class="muted">(비중 N%)</span></h3>
+<table class="topic-table">
+<tbody>
+<tr><th>반응 요약</th><td><ul><li><strong>원인</strong>: …</li><li><strong>평가/감정</strong>: …</li></ul></td></tr>
+<tr><th>키워드</th><td>…</td></tr>
+<tr><th>관련 댓글</th><td><div class="quote">“…”</div></td></tr>
+</tbody>
+</table>
+</div>
+<hr/>
+<div class="topic">
+<h3 class="topic-title">④ 토픽명 <span class="muted">(비중 N%)</span></h3>
 <table class="topic-table">
 <tbody>
 <tr><th>반응 요약</th><td><ul><li><strong>원인</strong>: …</li><li><strong>평가/감정</strong>: …</li></ul></td></tr>
