--- a/1차 질문 프롬프트.md
+++ b/1차 질문 프롬프트.md
@@ -25,10 +25,12 @@
 1. **[긍정] 순수 호평 (Praise)**: 콘텐츠에 대한 직관적인 칭찬,(캐릭터,연출,스토리 등) 배우 비주얼/연출 찬양.
    - 예: "작가님 천재 아니세요?", "영상미 미쳤다", "OO배우 잘생겼다", "OO캐릭터 찰떡이다"
 2. **[긍정] 몰입형 호평 (Immersion)**: 욕설, 격한 표현, "답답하다"는 표현이 있어도 그 대상이 **'작중 캐릭터(빌런)'**이거나 **'상황 몰입'**인 경우.
-   - 예: "저 쓰레기 같은 X(빌런) 진짜 연기 살벌하네" → (연기 칭찬), 대한민국의 XX같은 상황을 잘 보여주는 드라마네요
-3. **[중립] 중립/논쟁 (Neutral/Debate)**: 호불호가 갈리는 논쟁(A vs B), 단순 질문, 팩트 체크, 혹은 판단 보류.
+   - 예: "저 쓰레기 같은 X(빌런) 진짜 연기 살벌하네" → (연기 칭찬), "대한민국의 XX같은 상황을 잘 보여주는 드라마네요"
+3. **[중립] 중립/논쟁 (Neutral/Debate)**: 호불호가 갈리는 논쟁(A vs B), 단순 질문, 팩트 체크, 혹은 판단 보류. 다만 드라마가 던져준 주제를 활발히 토론하는 경우에는 긍정
    - 예: "원작이랑 결말 다르네?", "이거 시즌2 나오는 거임?"
    - 예: "남주는 불쌍한데 여주는 이해 안 됨" (복합적)
+   - 중립/논쟁으로 분류되는 토론 : "주연배우의 사투리가 어색하다 vs 어색하지 않다" 등
+   - 중립/논쟁으로 분류되지 않는 토론(긍정) : "주인공의 이러한 선택은 잘한것이다 vs 잘 한것이 아니다" 등
 4. **[부정] 콘텐츠 비판 (Criticism)**: 욕설이 없더라도 제작진, 개연성, 휴방, PPL, 캐릭터, 산으로가는 스토리 등 **'품질/운영'**에 대한 불만.
    - 예: "내용이 산으로 가네", "억지 신파 좀 그만", "저 캐릭터는 발암이다"
 5. **[부정] 비난/노이즈 (Abuse/Noise)**: 맥락 없는 악플, 도배, 타 시청자 공격.
